Just minor spacing fixes.

--- a/Economiq/Client/wwwroot/css/app.css
+++ b/Economiq/Client/wwwroot/css/app.css
@@ -177,15 +177,6 @@ body {
     justify-content: space-between;
 }
 
-.footer2 {
-    display: flex;
-    justify-content: space-between;
-    border-top: 2px solid #00d4ff;
-    padding-top: 10px;
-    position: fixed;
-    bottom: 1px;
-    height: 7rem;
-}
 
 
 .navbar .createbtn {
